[package]
name = "sublink_defi_contract"
version = "0.1.0"
authors = ["LaurentTrk <laurent.turek@gmail.com>"]
edition = "2021"
description = "SubLink ink! extension simpliest contract"
license = "Unlicense"
publish = false
repository = "https://github.com/LaurentTrk/sublink-pallets"

[dependencies]
log = { version = "0.4", default-features = false }
ink_primitives = { version = "=3.0.1", default-features = false }
ink_metadata = { version = "=3.0.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.0.1", default-features = false }
ink_storage = { version = "=3.0.1", default-features = false }
ink_lang = { version = "=3.0.1", default-features = false }
ink_prelude = { version = "=3.0.1", default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

sublink-ink-contract-extension = { git = "https://github.com/LaurentTrk/sublink-pallets", default-features = false,  branch = "main", features = ["ink-log-chain-extensions"] }

[lib]
name = "sublink_defi_contract"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "log/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "sublink-ink-contract-extension/std"
]
ink-as-dependency = []
